<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:padding="10dp">
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/image_description"/>

        <LinearLayout
            android:layout_toEndOf="@id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="24dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_film"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_tanggalrilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/date_release"/>
            <TextView
                android:id="@+id/txt_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/popularity" />
        </LinearLayout>
    </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>